Added some flatpaks and pop-shell extention

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -27,6 +27,7 @@ modules:
       # - starship
       # - cosmic-desktop
       # - mullvad-vpn
+      # - gnome-shell-extension-pop-shell
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
@@ -43,10 +44,23 @@ modules:
       install:
         # - org.mozilla.firefox
         # - org.gnome.Loupe
-        # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
-      # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
-      # only normal flatpak applications are (like Floorp Lightning web browser in this example).
-      # Installing different branches of the same Flatpak is not supported.
+        # - com.belmoussaoui.Obfuscate
+        # - com.discordapp.Discord
+        # - com.github.ADBeveridge.Raider
+        # - com.github.johnfactotum.Foliate
+        # - com.spotify.Client
+        # - com.yubico.yubioath
+        # - dev.geopjr.Collision
+        # - fr.romainvigier.MetadataCleaner
+        # - net.mullvad.MullvadBrowser
+        # - org.gnome.Polari
+        # - org.gnome.Snapshot
+        # - org.signal.Signal
+        # - io.gitlab.adhami3310.Converter
+        # - im.riot.Riot
+        # - com.mattermost.Desktop
+        # - de.haeckerfelix.Fragments
+        # - org.raspberrypi.rpi-imager
       remove:
       # - org.gnome.eog
 
