--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -5,7 +5,7 @@ description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
 base-image: ghcr.io/ublue-os/bluefin-dx
-image-version: 40 # latest is also supported if you want new updates ASAP
+image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -28,6 +28,7 @@ modules:
        - cosmic-desktop
        - mullvad-vpn
        - gnome-shell-extension-pop-shell
+       - rustup
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
@@ -65,4 +66,7 @@ modules:
       # - org.gnome.eog
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
-
+type: systemd
+system:
+  enabled:
+    - mullvad-daemon.service  # Enabled (runs on system boot)
