--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -28,6 +28,8 @@ modules:
        - cosmic-desktop
        - mullvad-vpn
        - gnome-shell-extension-pop-shell
+       - rust
+       - cargo
        - rustup
     remove:
       # example: removing firefox (in favor of the flatpak)
