--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -17,18 +17,18 @@ modules:
                   # in /usr/etc/ in the image. read more in files module reference.
 
   - type: rpm-ostree
-    repos:
+    repos:o
        - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
-       - https://copr.fedorainfracloud.org/coprs/ryanabx/cosmic-epoch/repo/fedora-%OS_VERSION%/ryanabx-cosmic-epoch-fedora-%OS_VERSION%.repo
        - https://repository.mullvad.net/rpm/beta/mullvad.repo
     install:
        - micro
        - bat
        - starship
-       - cosmic-desktop
+       - @cosmic-desktop-environment
        - mullvad-vpn
        - gnome-shell-extension-pop-shell
        - rustup
+       - mullvad-browser
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
